--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
+    "firebase": "^10.3.1",
     "firebase-admin": "^11.10.1",
     "morgan": "^1.10.0"
   },
